# ifc2lbd

./: .gitignore  README.md  TODO  pyproject.toml
resources/: extract_ifc_collection_types.py
resources/alignments/: bot-ifcowl-ifc4.ttl
resources/ifc_schemas/: ifc2x3_collection_types.json  ifc2x3_collection_types.py  ifc2x3_select_types.json  ifc2x3_select_types.py  ifc4_collection_types.json  ifc4_collection_types.py  ifc4_select_types.json  ifc4_select_types.py  ifc4x3_add2_collection_types.json  ifc4x3_add2_collection_types.py  ifc4x3_add2_select_types.json  ifc4x3_add2_select_types.py  ifc_collection_types.json  ifc_collection_types.py
resources/ontologies/: remove_duplicates.py  retry_failed_scrap.py  retry_scrap_results.csv  scrap_results.csv  scrap_results_combined.csv  scrap_script.py  scrap_success.csv  scraped_combined.csv  test_html_scraping.py  test_single_uri.py  uri_list.txt
resources/ontologies/downloaded/: 02829e_168b00473ef7_saref4envi.ttl  02a17c_753f07fdaa10_brot.ttl  09d61f_c7634c46da17_ontology.nt  0b4c8b_9a72c4174594_icdd2ams.ttl  10769b_d3b880374292_landing.html  14b9db_0a8f0b908c21_idpo.ttl  1a1015_0d2156077a3b_saref4bldg.rdf  1a1015_f891b4bf1601_saref4bldg.nt  22e9cf_8ff2db77feac_ontology.ttl  22e9cf_adee87d6cde7_ontology.nt  250bb9_84e3b7561410_sao.ttl  323530_925c07a0e64c_bpo.ttl  465bb4_398b392bfdd2_v2.1.1.ttl  4e2968_02f17c085b55_sml-skos.ttl  4e2968_05e3bad665a4_sml2-skos.ttl  5b05d4_e7721b2646fe_aoi.ttl  604706_499b0929a49e_ssn.ttl  66e174_ddfd73b405f9_ontology.ttl  694136_af131aa64ed4_dano.ttl  746772_4e0eb1a07dca_ocqa.ttl  76ede4_62d571133bd5_v2.1.1.ttl  7a385f_25192c837e47_ontology.ttl  7c896b_ab24a0efa92d_v2.1.1.ttl  7f5687_0d2df0ad6683_materials.ttl  7fa3e1_9103b6d1411c_ontology.ttl  7fa3e1_a24640085041_ontology.nt  8005bc_bb2e2970c307_ontology.ttl  83cbfc_0ce9a1147ca8_calidad-aire.ttl  93731f_c46622b04197_ontology.ttl  97eb46_38937279649c_ontology.ttl  a0c759_85a3f10c9fe9_unocs.ttl  a1fc4c_97e0e999893d_saref4grid.ttl  a68eeb_ad6bbe089d11_saref4ener.ttl  b1a00a_0696d12e129e_ontology.ttl  b1fc02_e013230000c6_ontology.ttl  c873bb_40496355476a_scraped_ontology.ttl  cd1a02_90c1180aca43_v2.1.1.ttl  deeffe_3fc941c22b17_ontology.ttl  e082a4_e251a314d6b0_core.ttl  e41f01_7f66666807e8_sosa.ttl  (+15 more)
src/: cli.py
src/ifc/: ifc_options.py
src/ifc2lbd/: convert.py  geometry.py
src/lbd/: TTL_writer.py  TTL_writer_strings_spf.py  TTL_writer_strings_stream.py  namespaces.py
