[project]
authors = [{name = "piotr-smolira", email = "pimas@dtu.dk"}]
dependencies = []
name = "ifc2lbd"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "ifcopenshell"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
ifc2lbd = { path = ".", editable = true }

[tool.pixi.tasks]
convert = "python src/main.py"

[tool.pixi.feature.stable-pypi.dependencies]
python = ">=3.11,<3.14"
requests = "*"
beautifulsoup4 = "*"

[tool.pixi.feature.stable-conda.dependencies]
python = "*"
ifcopenshell = ">=0.8.4.post1,<0.9"
lark = ">=1.3.0,<2"

[tool.pixi.feature.experimental-conda.dependencies]
python = "*"
ifcopenshell = { version = ">=0.8.5alpha260112,<0.9", channel = "ifcopenshell" }
pyoxigraph = ">=0.5.3.post1,<0.6"
lark = ">=1.3.0,<2"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.performance-test.dependencies]
psutil = "*"
pytest-benchmark = "*"

[tool.pixi.environments]
stable-conda = { features = ["stable-conda"], no-default-feature = true }
stable-pypi = { features = ["stable-pypi"], no-default-feature = true }
experimental-conda = { features = ["experimental-conda"], no-default-feature = true }
test = ["test"]
perf-test = ["test", "performance-test"]

[tool.pixi.dependencies]
pyoxigraph = ">=0.5.3.post1,<0.6"

[tool.pixi.feature.stable-conda.tasks]
attr = "python src/lbd/attribute_name.py"
cli = "python src/main.py"
test = "python src/main.py -i data/input/Duplex.ifc -o data/output/Duplex-spf.ttl --verbose"
rail_test = "python src/main.py -i data/input/Rail.ifc -o data/output/Rail.ttl --verbose"

[tool.pixi.feature.experimental-conda.tasks]
# Stream with 1 pass and optimized converter
stream_1pass = "python src/main.py -i data/input/InfraBridge.ifc -o data/output/InfraBridge-stream-1pass.ttl --converter mini_ifcowl --stream --verbose --single-pass"
# Stream with 1 pass, optimized converter and profiling
stream_1pass_profiling = "python src/main.py -i data/input/InfraBridge.ifc -o data/output/InfraBridge-stream-1pass-profiling.ttl --converter mini_ifcowl --stream --verbose --single-pass --profile"
# Stream with 1 pass, optimized converter and benchmarking
stream_1pass_benchmark = "python src/main.py -i data/input/InfraBridge.ifc -o data/output/InfraBridge-stream-1pass-benchmark.ttl --converter mini_ifcowl --stream --verbose --single-pass --benchmark"

[tool.pixi.feature.stable-pypi.tasks]

stream = "python src/main.py -i data/input/InfraBridge.ifc -o data/output/InfraBridge-mini_ifcowl.ttl --converter mini_ifcowl --stream --verbose"

stream_ifcowl = "python src/main.py -i data/input/Viadotto.ifc -o data/output/Viadotto-ifcowl.ttl --converter ifcowl --stream --verbose"

refactored = "python src/main.py -i data/input/InfraBridge.ifc -o data/output/InfraBridge-refactored-by-co.ttl --converter co_refactored --stream --verbose --benchmark"

functional = "python src/main.py -i data/input/InfraBridge.ifc -o data/output/InfraBridge-functional-by-co.ttl --converter co_functional --stream --verbose --benchmark"


#### PLEASE use these tasks for testing.
refactored_test = "python src/main.py -i test_files/InfraBridge.ifc -o test_files/InfraBridge-refactored-test.ttl --converter co_refactored --stream --verbose"

functional_test = "python src/main.py -i test_files/InfraBridge.ifc -o test_files/InfraBridge-functional-test.ttl --converter co_functional --stream --verbose"

[dependency-groups]
stable-pypi = ["ifcopenshell>=0.8.4.post1,<0.9"]
